report a bug modal is scrollable with overflow now

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -346,10 +346,12 @@ nav.navbar {
 }
 
 .bug-report-modal {
+    bottom: 10px;
+    max-height: 100%;
+    overflow: scroll;
     position: fixed;
-    right: 30px;
-    top: 35%;
-    height: 300px;
+    right: 10px;
+    top: 45px;
     width: 300px;
     z-index: 100;
     .modal-header { padding: 12px; }
